<resources>
    <string name="app_name">AppHack</string>
    <string name="client_code">Código de Cliente</string>
    <string name="search">Buscar</string>
    <string name="new_session">Genera nueva recomendación</string>
    <string name="select_answer">Selecciona una respuesta.</string>
    <string name="survey_description">Únicamente podrás constestar una pregunta por bloque</string>
    <string name="q1">1.- ¿Es tu primera moto?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="q2">2.- ¿Qué proposito tendrá tu moto?</string>
    <string name="work">Trabajo</string>
    <string name="personal">Personal</string>
    <string name="fun">Recreativo</string>
    <string name="q3">3.- ¿De qué presupuesto dispones?</string>
    <string name="until_15_k">Hasta $15,000.00</string>
    <string name="btw_15k_20k">$15,000.00 a $20,000.00</string>
    <string name="btw_20k_30k">$20,000.00 a $30,000.00</string>
    <string name="more_30k">Más de $30,000.00</string>
    <string name="q4">4.- ¿Qué rendimiento de combustible esperas?</string>
    <string name="less_100km">Menos de 100 km</string>
    <string name="btw_100km_200km">Entre 100 km y 200 km</string>
    <string name="btw_200km_300km">Entre 200 km y 300 km</string>
    <string name="next">Siguiente</string>
    <string name="survey">Encuesta</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>
    <string name="city">Ciudad</string>
    <string name="quote">Cotizar ahora</string>
    <string name="error">Error</string>
    <string name="error_creating_intent">Se produjo un error al crear la Intension, Intentalo de nuevo mas tarde</string>
    <string name="ok">OK</string>
    <string name="ref_number">NO. DE REFERENCIA</string>
    <string name="more">Ver más</string>
    <string name="error_loading_profile">Se produjo un error al cargar los datos de la referencia.</string>
    <string name="engine_type">Tipo de motor</string>
    <string name="cilindrada">Cilindrada</string>
    <string name="max_speed">Velocidad máxima</string>
    <string name="capacity">Capacidad de Combustible</string>
</resources>
