<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorPrimary"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <ImageView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="De $200.00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="A $133.00" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_margin="16dp"
                android:textStyle="italic"
                tools:text="Description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/engine_type"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/cilindrada"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/max_speed"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:text="@string/capacity"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="2"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
